--- a/styles/body.css
+++ b/styles/body.css
@@ -9,8 +9,9 @@
 
 body {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     margin: 0 auto;
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
