--- a/styles/catalog-style.css
+++ b/styles/catalog-style.css
@@ -2,15 +2,80 @@
 main {
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .catalog-container {
-    max-width: 100%;
+    max-width: 1200px;
     margin: 18px 0 30px;
+    padding: 0 15px;
 }
 
 .catalog-content {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    gap: 40px;
+    gap: 1.5rem;
+}
+
+.catalog-nav {
+    margin-bottom: 20px;
+}
+
+.bag-button {
+    max-width: 220px;
+    min-width: 200px;
+    min-height: 42px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #FFFFFF;
+    border: 1px solid #000000;
+}
+
+.bag-button:hover {
+    background: #D9D9D9;
+}
+
+.bag-text{
+    display: flex;
+    align-items: center;
+}
+
+.bag-text p {
+    order: 2;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 22px;
+    text-transform: uppercase;
+    color: #000000;
+}
+
+.bag-text img {
+    order: 1;
+    margin-right: 10px;
+}
+
+.books-count {
+    min-width: 48px;
+    min-height: 31px;
+    padding: 2px 5px;
+    background: #393939;
+    border-radius: 16px;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
 }
