--- a/styles/footer.css
+++ b/styles/footer.css
@@ -11,7 +11,7 @@ footer {
     width: 1200px;
     height: auto;
     padding: 0 15px;
-    margin: 10px 40px;
+    margin: 10px 0 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
