--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
 -------------------------------------------------*/
 /*-------------------------------------------------
     ==== File Structure  ====
+        * Fonts
+        * Variables
         * Body
         * Header
         * Catalog
@@ -16,6 +18,9 @@
         * Footer
 -------------------------------------------------*/
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+@import url(./styles/variables.css);
 @import url(./styles/body.css);
 @import url(./styles/header-style.css);
 @import url(./styles/catalog-style.css);
