--- a/styles/book-card-style.css
+++ b/styles/book-card-style.css
@@ -3,7 +3,7 @@
     width: 247px;
     height: 487px;
     background: transparent;
-    border: 1px solid black;
+    border: 1px solid var(--green);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,7 +12,7 @@
 .book-card img {
     width: 247px;
     height: 324px;
-    border: 1px solid black;
+    border: 1px solid var(--green);
 }
 
 .text-container {
@@ -35,11 +35,8 @@
 }
 
 .book-author p {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
     font-size: 14px;
-    line-height: 17px;
+    line-height: 18px;
     text-align: center;
     white-space: normal;
     overflow: hidden;
@@ -56,24 +53,18 @@
 }
 
 .book-title h2 {
-    font-family: 'Inter';
-    font-style: normal;
+    font-size: 1rem;
     font-weight: 700;
-    font-size: 16px;
-    line-height: 22px;
     text-align: center;
     white-space: normal;
     overflow: hidden;
     text-overflow: ellipsis;
-    color: #000000;
+    color: var(--blue-red);
 }
 
 .buy-button {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
     font-size: 14px;
-    line-height: 17px;
+    line-height: 18px;
 
     width: 100%;
     padding: 10px;
@@ -81,9 +72,17 @@
     align-items: center;
     text-align: center;
     justify-content: center;
+    font-weight: 700;
     text-transform: uppercase;
-    border: 1px solid #000000;
-    color: #212121;
+    border-radius: 8px;
+    border: 1px solid var(--green);
+    background-color: var(--white);
+    color: var(--blue-red);
+}
+
+.buy-button:hover {
+    background: var(--green);
+    color: white;
 }
 
 .buy-button > p > span {
