--- a/styles/header-style.css
+++ b/styles/header-style.css
@@ -10,19 +10,15 @@
 }
 
 h1 {
-    font-family: 'Inter';
-    font-style: normal;
     font-weight: 700;
     font-size: 24px;
-    line-height: 29px;
+    line-height: 32px;
     text-transform: uppercase;
-
     margin: 24px 0;
-    color: #000000;
 }
 
 .header-divider {
     width: 100%;
     height: 2px;
-    background: #393939;
+    background: var(--green);
 }
