--- a/styles/book-card-style.css
+++ b/styles/book-card-style.css
@@ -1,7 +1,7 @@
 /* BOOK CARD STYLE */
 .book-card {
     width: 247px;
-    height: 487px;
+    height: 100%;
     background: transparent;
     border: 1px solid var(--green);
     display: flex;
@@ -65,7 +65,7 @@
 .buy-button {
     font-size: 14px;
     line-height: 18px;
-
+    
     width: 100%;
     padding: 10px;
     display: flex;
@@ -87,4 +87,26 @@
 
 .buy-button > p > span {
     font-weight: 700;
+}
+
+.info-button {
+    font-size: 14px;
+    line-height: 18px;
+
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    font-weight: 700;
+    text-decoration: underline;
+    background: transparent;
+    cursor: pointer;
+    border: none;
+    color: var(--blue-red);
+}
+
+.info-button:hover {
+    color: var(--green);
 }
