--- a/styles/catalog-style.css
+++ b/styles/catalog-style.css
@@ -24,6 +24,11 @@ main {
     margin-bottom: 20px;
 }
 
+.bag-container {
+    width: 18%;
+    height: 100%;
+}
+
 .bag-button {
     max-width: 220px;
     min-width: 200px;
@@ -35,10 +40,16 @@ main {
     background: #FFFFFF;
     border-radius: 8px;
     border: 1px solid var(--green);
+    cursor: pointer;
+}
+
+button.over {
+    background: #f0f0f0;
+    border: 1px solid var(--sunset);
 }
 
 .bag-button:hover {
-    background: rgba(0, 0, 0, 0.1);
+    background: #f0f0f0;
 }
 
 .bag-text{
