--- a/styles/body.css
+++ b/styles/body.css
@@ -14,6 +14,7 @@ body {
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     scroll-behavior: smooth;
 
