--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
         * Catalog
         * Book card
         * Order books
+        * Ordered book card
         * Footer
 -------------------------------------------------*/
 
@@ -31,4 +32,5 @@
 @import url(./styles/catalog-style.css);
 @import url(./styles/book-card-style.css);
 @import url(./styles/order.css);
+@import url(./styles/ordered-book-card.css);
 @import url(./styles/footer.css);
