--- a/styles/order.css
+++ b/styles/order.css
@@ -23,6 +23,7 @@
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     margin-bottom: 20px;
     border: 1px solid var(--green);
 }
