--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@
         * Order books
         * Ordered book card
         * Footer
+
+        --- Order Page Style ---
+        * Order page
 -------------------------------------------------*/
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
@@ -34,3 +37,5 @@
 @import url(./styles/order.css);
 @import url(./styles/ordered-book-card.css);
 @import url(./styles/footer.css);
+
+/* @import url(./styles/order-page.css); */
