--- a/styles/order-page.css
+++ b/styles/order-page.css
@@ -305,6 +305,50 @@ input.error {
     bottom: 20px;
 }
 
+/* CUSTOMER INFO */
+div#customer-info {
+    display: none;
+    position: relative;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 60px 20px;
+}
+
+#customer-info > h3 {
+    margin-bottom: 20px;
+}
+
+.info-message-icon {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border: 3px solid #6A8279;
+    margin-bottom: 20px;
+}
+
+.info-message-icon::before {
+    content: "";
+    position: absolute;
+    top: 97px;
+    left: 49.2%;
+    width: 3px;
+    height: 22px;
+    background-color: #6A8279;
+    transform: rotate(-45deg);
+}
+
+.info-message-icon::after {
+    content: "";
+    position: absolute;
+    top: 102px;
+    left: 49.6%;
+    width: 32px;
+    height: 3px;
+    background-color: #6A8279;
+    transform: rotate(-45deg);
+}
+
 @media screen and (max-width: 768px) {
     #wrapper {
         margin: 20px auto;
