--- a/styles/popup.css
+++ b/styles/popup.css
@@ -1,29 +1,28 @@
-#modal-overlay #modal {
-    max-width: 650px;
-    width: 100%;
-    background: white;
-    height: 400px;
-
-    display: flex;
-    flex-direction: column;
-    padding: 40px 20px 20px;
-}
-
 #modal-overlay {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
     display: none;
     justify-content: center;
     align-items: center;
+    background: rgba(0,0,0,0.7);
 }
 
 #modal-overlay #modal .modal-footer {
     margin-top: auto;
 }
 
-.modal-overlay {
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    background: rgba(0,0,0,0.7);
+#modal {
+    position: absolute;
+    width: 650px;
+    height: 400px;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    padding: 40px 20px 20px;
+    margin: 30px auto 0;
 }
 
 .modal-title {
