--- a/styles/order-page.css
+++ b/styles/order-page.css
@@ -87,7 +87,7 @@ input[type=number] {
     border: none;
     border-bottom: 2px solid #6A8279;
 	color: #6A8279;
-    font-size: 1rem;
+    font-size: 1.25rem;
     font-weight: 400;
     letter-spacing: 1px;
     margin: 0 0 1.875em 0;
@@ -108,7 +108,6 @@ label[for=name],
 input[type=text]:focus,
 input[type=number]:focus {
     outline: none;
-    padding: 0.875em 0;
     border-bottom: 2px solid #CC4541;
 }
 
@@ -130,13 +129,13 @@ label.date-input {
 }
 
 input[type=date] {
-    background-color: #6A8279;
+    width: 160px;
+    color: #5A5A5A;
+    border: 2px solid #6A8279;
     padding: 10px;
-    color: #F2F3EB;
+    background: transparent;
     font-size: 18px;
-    border: none;
     outline: none;
-    border-radius: 2px;
     text-transform: uppercase;
 }
 
@@ -289,8 +288,14 @@ label.checkbox:hover::before {
 
 /* ERROR STYLE */
 input.error {
-    border-bottom:2px solid #CC4541;
+    border-bottom: 2px solid #CC4541;
 }
+
+input[type=date].error {
+    color: #CC4541;
+    border: 2px solid #CC4541;
+}
+
 .error {
     position: relative;
     padding: 0;
