--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,12 +8,12 @@
 
     /* ## Colors */
         /* ### Primary */
-        --black-red: #372C2B;
+        --black-red: #5A5A5A;
         --coconut-cream: #E4C6B5;
         --desert-storm: #F0e6db;
         --sunset: #CC4541;
         --green: #6A8279;
-        --white: #FFFFFF;
+        --white: white;;
         --black: #000000;
 
         /* ### Gradients */
