--- a/styles/body.css
+++ b/styles/body.css
@@ -24,5 +24,5 @@ body {
     font-size: var(--font-size-base);
     line-height: 22px;
     color: var(--black-red);
-    background-color: var(--white);
+    background-color: #F2F3EB;
 }
