--- a/styles/book-card-style.css
+++ b/styles/book-card-style.css
@@ -2,17 +2,20 @@
 .book-card {
     width: 247px;
     height: 100%;
-    background: transparent;
+    overflow: hidden;
+    background: white;
     border: 1px solid var(--green);
     display: flex;
     flex-direction: column;
     align-items: center;
+    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 10%), 0 4px 6px -2px rgb(0 0 0 / 5%);
 }
 
 .book-card img {
-    width: 247px;
+    width: 100%;
     height: 324px;
-    border: 1px solid var(--green);
+    display: block;
+    align-self: middle;
 }
 
 .text-container {
@@ -52,7 +55,7 @@
     justify-content: center;
 }
 
-.book-title h2 {
+.book-title h3 {
     font-size: 1rem;
     font-weight: 700;
     text-align: center;
@@ -63,26 +66,27 @@
 }
 
 .buy-button {
-    font-size: 14px;
+    font-size: 0.875em;
+    font-weight: 700;
+    outline: none;
+    text-transform: uppercase;
     line-height: 18px;
-    
     width: 100%;
     padding: 10px;
     display: flex;
     align-items: center;
     text-align: center;
     justify-content: center;
-    font-weight: 700;
-    text-transform: uppercase;
-    border-radius: 8px;
-    border: 1px solid var(--green);
-    background-color: var(--white);
-    color: var(--blue-red);
+    border: 2px solid var(--green);
+    color: var(--green);
+    background: none;
+    cursor: pointer;
+    transition: all 0.3s;
 }
 
 .buy-button:hover {
     background: var(--green);
-    color: white;
+    color: #F2F3EB;
 }
 
 .buy-button > p > span {
@@ -92,19 +96,18 @@
 .info-button {
     font-size: 14px;
     line-height: 18px;
-
+    font-weight: 400;
+    text-decoration: underline;
     width: 100%;
     padding: 10px;
     display: flex;
     align-items: center;
     text-align: center;
     justify-content: center;
-    font-weight: 700;
-    text-decoration: underline;
-    background: transparent;
     cursor: pointer;
     border: none;
-    color: var(--blue-red);
+    background: transparent;
+    color: rgba(0, 0, 0, 0.5);
 }
 
 .info-button:hover {
