--- a/styles/header-style.css
+++ b/styles/header-style.css
@@ -10,15 +10,18 @@
 }
 
 h1 {
-    font-weight: 700;
+    margin: 24px 0;
     font-size: 24px;
     line-height: 32px;
+    font-weight: 700;
+    letter-spacing: 7px;
+    text-align: center;
     text-transform: uppercase;
-    margin: 24px 0;
+    color: #474544;
 }
 
 .header-divider {
     width: 100%;
-    height: 2px;
+    height: 3px;
     background: var(--green);
 }
