--- a/styles/main.css
+++ b/styles/main.css
@@ -23,3 +23,15 @@ main {
     align-items: flex-start;
     gap: 40px;
 }
+
+h2 {
+    width: 100%;
+    font-size: 18px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    border-bottom: 2px solid var(--green);
+    color: #474544;
+}
