--- a/styles/order.css
+++ b/styles/order.css
@@ -7,15 +7,6 @@
     flex: 1;
 }
 
-.order-header {
-    width: 100%;
-    text-transform: capitalize;
-    padding-bottom: 20px;
-    margin-bottom: 20px;
-    border-bottom: 1px solid var(--green);
-    color: var(--green);
-}
-
 .order-container {
     position: relative;
     min-width: 150px;
@@ -25,7 +16,8 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
-    border: 1px solid var(--green);
+    border: 1px solid #ccc;
+    background-color: #d7d8d240;
 }
 
 .order-header .order-container {
@@ -45,29 +37,23 @@
 }
 
 input[type=submit] {
+    background: none;
+    border: 2px solid #6A8279;
+    color: #6A8279;
+    cursor: pointer;
     width: 45%;
     min-width: 180px;
     min-height: 42px;
     align-self: flex-end;
-
+    padding: 20px 35px;
+    font-size: 0.875em;
     font-weight: 700;
-    font-size: 16px;
-    line-height: 22px;
+    outline: none;
     text-transform: uppercase;
-    color: var(--white);
-
-    padding: 10px;
-    background: var(--green);
-    border-radius: 8px;
-    border: none;
-    cursor: pointer;
-}
-
-input[type=submit].blocked {
-    background: grey;
-    color: darkslategray;
+    transition: all 0.3s;
 }
 
 input[type=submit]:hover {
-    filter: brightness(90%);
+    background: #6A8279;
+    color: #F2F3EB;
 }
