--- a/styles/ordered-book-card.css
+++ b/styles/ordered-book-card.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid var(--green);
+    border-bottom: 1px solid #ccc;
 }
 
 .ordered-book-img {
