--- a/styles/order.css
+++ b/styles/order.css
@@ -10,14 +10,34 @@
 .order-container {
     position: relative;
     min-width: 150px;
-    min-height: 450px;
+    min-height: 300px;
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
-    border: 1px solid #ccc;
+    border: 2px solid #ccc;
     background-color: #d7d8d240;
+}
+
+.empty-bag {
+    font-size: 20px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 25% 0;
+    color: var(--green);
+    opacity: 1;
+    transition: all 0.3s;
+}
+
+.order-container:hover {
+    border: 2px dashed var(--green);
+}
+
+.order-container:hover .empty-bag {
+    font-weight: 700;
 }
 
 .order-header .order-container {
